--- a/cmd/vehicle-discovery/Dockerfile
+++ b/cmd/vehicle-discovery/Dockerfile
@@ -1,5 +1,8 @@
 FROM golang:1.22.3-alpine as builder
 WORKDIR /app
+COPY go.mod .
+COPY go.sum .
+RUN go mod download
 COPY . .
 RUN go build -o vehicle-discovery ./cmd/vehicle-discovery/main.go
 
